# pimai

./: .gitignore  LICENSE  README.md  docker-compose.yml  drawSSExp.py  generate_model_graphics.py  knn_experiment.py  pyproject.toml  start.sh  train.py  train_models_array.py
assets/data/runs/: events.out.tfevents.1574786035.154a6aae3517.76.1  events.out.tfevents.1574951062.462beb21d07e.114.0  events.out.tfevents.1574951063.462beb21d07e.114.1  events.out.tfevents.1575625662.154a6aae3517.71.0  events.out.tfevents.1575633668.154a6aae3517.71.1  events.out.tfevents.1575633922.154a6aae3517.71.2  events.out.tfevents.1575633922.154a6aae3517.71.3  events.out.tfevents.1575633941.154a6aae3517.71.4  events.out.tfevents.1575633941.154a6aae3517.71.5  events.out.tfevents.1575633995.154a6aae3517.71.6  events.out.tfevents.1575634008.154a6aae3517.71.7  events.out.tfevents.1575634070.154a6aae3517.71.8  events.out.tfevents.1575634096.154a6aae3517.71.9  events.out.tfevents.1575634125.154a6aae3517.71.10  events.out.tfevents.1575634215.154a6aae3517.71.11  events.out.tfevents.1575885483.154a6aae3517.71.12  events.out.tfevents.1575885759.154a6aae3517.71.13  events.out.tfevents.1575885878.154a6aae3517.71.14  events.out.tfevents.1575885920.154a6aae3517.71.15  events.out.tfevents.1575886037.154a6aae3517.71.16  events.out.tfevents.1575886133.154a6aae3517.71.17  (+141 more)
model_weights/: model.pth
src/model/: base.py  dataset.py  sbvae.py  sbvae_alldist.py  sssbvae.py  vae.py
src/notebook/: .gitignore  Dockerfile  pyproject.toml  start_notebook.sh
src/util/: Distributions.py
(+71 files in other folders)
