[tool.poetry]
name = "pimai"
version = "0.1.0"
description = ""
authors = ["wittenator <wittenator@yahoo.de>"]

[tool.poetry.dependencies]
python = "^3.6"
gradient = "^0.5.1"
tensorboard = "^2.1"
hypertools = "^0.6.2"
plotly = "^4.5"
psutil = "^5.7"
requests = "^2.23"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
