[tool.poetry]
name = "pimai"
version = "0.1.0"
description = ""
authors = ["wittenator <wittenator@yahoo.de>"]

[tool.poetry.dependencies]
python = "^3.8"
cython = "^0.29.16"
hypertools = "^0.6.2"
tensorboard = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
