[tool.poetry]
name = "pimai"
version = "0.1.0"
description = ""
authors = ["wittenator <wittenator@yahoo.de>"]

[tool.poetry.dependencies]
python = "^3.8"
cython = "^0.29.16"
hypertools = "^0.6.2"
tensorboard = "^2.2.1"
plotly = "^4.6.0"
psutil = "^5.7.0"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
